# knir_scan

./: CMakeLists.txt  main.cpp  projection_fix.cpp
raw_data/comparison/daylight/: comparison_daylight.json
raw_data/comparison/green/: comparison_green.json
raw_data/comparison/lamp/: comparison_lamp.json
raw_data/comparison/punk/: IMG_1031.HEIC  IMG_1033.HEIC  comparison_punk.json
